# acts

./: CMakeCache.txt
Examples/Algorithms/Geant4/include/ActsExamples/Geant4/: GdmlDetectorConstruction.hpp
Examples/Algorithms/Geant4/src/: GdmlDetectorConstruction.cpp
Examples/Detectors/DD4hepDetector/src/OpenDataDetector/: ODDPixelBarrel_geo.cpp
Examples/Detectors/TGeoDetector/include/ActsExamples/TGeoDetector/: BuildTGeoDetector.hpp  TGeoDetectorOptions.hpp  TGeoModuleSplitterBarrel.hpp
Examples/Detectors/TGeoDetector/src/: TGeoDetectorOptions.cpp
Examples/Run/DD4hep/: CMakeLists.txt  DD4hepDetectorGdmlExample.cpp
Examples/Run/Geant4/: CMakeLists.txt  GdmlOverlapCheck.cpp  GdmlOverlapsCheck.cpp
Examples/Run/Geometry/DD4hep/: DD4hepGeometryGDMLdump.cpp
Examples/Run/MagneticField/: CMakeLists.txt  ODDBFieldWriter.cpp
Examples/Scripts/: printBField.C
Examples/Scripts/MaterialMapping/: Mat_map.C  configureMap.py  materialPlotHelper.cpp  writeMapConfig.py
Plugins/TGeo/include/Acts/Plugins/TGeo/: TGeoLayerBuilder.hpp  TGeoModuleSplitter.hpp
Plugins/TGeo/src/: TGeoLayerBuilder.cpp
docs/howto/: run_material_mapping.rst
